hphp/test/slow/reified_generics/error-attribute-3.php.expectf
Fatal error: __Reified and __HasReifiedParent attributes may not be provided by the user in %s on line 4
